Add proyectos personales

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                 <li class="resume-item">
                                     <div class="resume-card">
                                         <p class="body-large">
-                                            Estudiante de Ingeniería Informatica, Universidad Gran Marisca de Ayacucho
+                                            Estudiante de Ingeniería Informatica, Universidad Gran Mariscal de Ayacucho
                                         </p>
 
                                         <span class="label-medium card-subtitle">
@@ -471,54 +471,54 @@
                             <div class="project-list">
                                 <div class="card">
                                     <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                                        <img src="./assets/images/project-1.png" alt="Pixstock - Stock Media App" class="img-cover" width="334" height="180">
+                                        <img src="./assets/images/project-7.jpg" alt="Pixstock - Stock Media App" class="img-cover" width="334" height="180">
                                     </figure>
 
                                     <div class="card-content">
-                                        <span class="label-large card-subtitle">Web App</span>
-                                        <h3 class="title-large card-title">Pixstock - Stock Media App</h3>
+                                        <span class="label-large card-subtitle">Sitio Web</span>
+                                        <h3 class="title-large card-title">La Esperanza Exequiales - Página web + Sitema de Formulario</h3>
 
                                     </div>
-                                    <a href="#" class="state-layer"></a>
+                                    <a target="_blank" href="https://laesperanzaexequiales.com/" class="state-layer"></a>
                                 </div>
 
                                 <div class="card">
                                     <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                                        <img src="./assets/images/project-2.png" alt="Cook.io - Recipe App" class="img-cover" width="334" height="180">
+                                        <img src="./assets/images/project-8.jpg" alt="Hipermercado Salto Ángel - Ecommerce" class="img-cover" width="334" height="180">
                                     </figure>
 
                                     <div class="card-content">
-                                        <span class="label-large card-subtitle">Web App</span>
-                                        <h3 class="title-large card-title">Cook.io - Recipe App</h3>
+                                        <span class="label-large card-subtitle">Sitio Web + Ecommerce</span>
+                                        <h3 class="title-large card-title">Hipermercado Salto Ángel - Ecommerce</h3>
 
                                     </div>
-                                    <a href="#" class="state-layer"></a>
+                                    <a target="_blank" href="https://hipermercadosaltoangel.com/" class="state-layer"></a>
                                 </div>
 
                                 <div class="card">
                                     <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                                        <img src="./assets/images/project-3.png" alt="GitFinder - Github User Finder" class="img-cover" width="334" height="180">
+                                        <img src="./assets/images/project-9.jpg" alt="Corporación Dispar - Catalogo Digital" class="img-cover" width="334" height="180">
                                     </figure>
 
                                     <div class="card-content">
-                                        <span class="label-large card-subtitle">Web App</span>
-                                        <h3 class="title-large card-title">GitFinder - Github User Finder</h3>
+                                        <span class="label-large card-subtitle">Sitio Web + Catálogo Digital </span>
+                                        <h3 class="title-large card-title">Corporación Dispar - Catálogo Digital</h3>
 
                                     </div>
-                                    <a href="#" class="state-layer"></a>
+                                    <a target="_blank" href="https://corporaciondispar.com/" class="state-layer"></a>
                                 </div>
 
                                 <div class="card">
                                     <figure class="card-banner img-holder" style="--width: 334; --height: 180;">
-                                        <img src="./assets/images/project-4.png" alt="Weatherio - Live Weather App" class="img-cover" width="334" height="180">
+                                        <img src="./assets/images/project-10.jpg" alt="Cafe Marketing - Sitio Web" class="img-cover" width="334" height="180">
                                     </figure>
 
                                     <div class="card-content">
-                                        <span class="label-large card-subtitle">Web App</span>
-                                        <h3 class="title-large card-title">Weatherio - Live Weather App</h3>
+                                        <span class="label-large card-subtitle">Página Web</span>
+                                        <h3 class="title-large card-title">Cafe Marketing - Sitio Web</h3>
 
                                     </div>
-                                    <a href="#" class="state-layer"></a>
+                                    <a target="_blank" href="https://www.cafemarketingpzo.com/" class="state-layer"></a>
                                 </div>
 
                             </div>
